fix(catalog): address CodeRabbit review comments on PR-01
Security:
- Block AnonymousAuthenticationToken in all 3 argument resolvers
  (CurrentOwnerId/CurrentMerchantId/CurrentAdminId); extract shared
  SessionAuthentications helper to avoid triplicated auth logic

Correctness:
- MerchantService.list now returns real total merchant count via new
  MerchantPersistencePort.count() (was returning page size)
- MerchantPersistenceAdapter.list applies stable Sort by createdAt DESC
  then merchantId ASC to prevent skips/dupes across pages
- CatalogMerchantQueryAdapter throws CatalogException(MERCHANT_NOT_FOUND)
  instead of IllegalArgumentException for stripe operations

Cleanup:
- Remove unused MerchantService.list(int, int) overload
- Remove unused MerchantRepository.findAllBy(Pageable)
- TestAuth uses Stream.toList() instead of Collectors.toList()

Tests:
- CatalogMerchantQueryAdapterTest: expect CatalogException
- MerchantPersistenceAdapterTest: verify Sort application, add count test
- MerchantControllerWebTest: verify listMerchantsInputPort interaction